testsuite/poke.pkl/cast-diag-1.pk
/* { dg-do compile } */

defun bar = void: {}
defvar v = bar as int<32>; /* { dg-error "" } */
